# rustac-py

./: .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  build.rs  latest  mkdocs.yml  pyproject.toml  release-please-config.json  rustac.pyi  stacrs.pyi  versions.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  crates-io.yaml  docs.yaml  duckdb-extensions.yaml  labels.yml  pypi.yaml  release-please.yaml  release-plz.yaml
data/: sentinel-1-global-mosaics.parquet
docs/: .markdownlint-cli2.jsonc  example.ipynb  index.md
docs/api/: arrow.md  duckdb.md  geoparquet.md  index.md  migrate.md  parquet.md  read.md  search.md  stac.md  version.md  walk.md  write.md
docs/examples/: README.md  example_search.py  example_store.py
docs/notebooks/: async-search.ipynb  index.md  its-live.ipynb  read.ipynb  search.ipynb  stac-geoparquet.ipynb  store.ipynb
duckdb-extensions/: CHANGELOG.md  README.md  pyproject.toml
duckdb-extensions/scripts/: build_wheel.py  download_extensions.py
duckdb-extensions/src/rustac_duckdb_extensions/: __init__.py
python/rustac/: __init__.py  duckdb.py  geoparquet.py  rustac.pyi  store
scripts/: format  lint  test
src/: api.rs  arrow.rs  cli.rs  collection.rs  duckdb.rs  error.rs  geoparquet.rs  lib.rs  migrate.rs  parquet.rs  read.rs  search.rs  version.rs  walk.rs  write.rs
tests/: conftest.py  test_api.py  test_arrow.py  test_collection.py  test_duckdb.py  test_migrate.py  test_read.py  test_search.py  test_version.py  test_walk.py  test_write.py
v0.10.0/: 404.html  index.html  sitemap.xml
v0.10.0/CONTRIBUTING/: index.html
v0.10.0/api/: index.html
v0.10.0/notebooks/: index.html
v0.10.0/search/: search_index.json
v0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.0/CONTRIBUTING/: index.html
v0.3.0/api/: index.html
v0.3.0/example/: index.html
v0.3.0/search/: search_index.json
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.0/CONTRIBUTING/: index.html
v0.4.0/api/: index.html
v0.4.0/example/: index.html
v0.4.0/search/: search_index.json
v0.5.0/: 404.html  index.html  sitemap.xml
v0.5.0/CONTRIBUTING/: index.html
v0.5.0/api/: index.html
v0.5.0/example/: index.html
v0.5.0/search/: search_index.json
v0.5.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.1/CONTRIBUTING/: index.html
v0.5.1/api/: index.html
v0.5.1/example/: index.html
v0.5.2/: 404.html  index.html  sitemap.xml
v0.5.2/CONTRIBUTING/: index.html
v0.5.2/api/: index.html
v0.5.2/example/: index.html
v0.5.3/: 404.html  index.html  sitemap.xml
v0.5.3/CONTRIBUTING/: index.html
v0.5.3/api/: index.html
v0.5.3/example/: index.html
v0.5.3/search/: search_index.json
v0.5.4/: 404.html  index.html  sitemap.xml
v0.5.4-rc.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.4-rc.0/CONTRIBUTING/: index.html
v0.5.4-rc.0/api/: index.html
v0.5.4-rc.0/example/: index.html
v0.5.4-rc.0/search/: search_index.json
v0.5.4/CONTRIBUTING/: index.html
v0.5.4/api/: index.html
v0.5.4/example/: index.html
v0.5.5/: 404.html  index.html  sitemap.xml
v0.5.5/CONTRIBUTING/: index.html
v0.5.5/api/: index.html
v0.5.5/example/: index.html
v0.5.5/search/: search_index.json
v0.5.6/: 404.html  index.html  sitemap.xml
v0.5.6-beta.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.6-beta.1/CONTRIBUTING/: index.html
v0.5.6-beta.1/api/: index.html
v0.5.6-beta.1/search/: search_index.json
v0.5.6/CONTRIBUTING/: index.html
v0.5.6/api/: index.html
v0.5.6/search/: search_index.json
v0.5.7/: 404.html  index.html  items-from-data-frame.parquet  items-uncompressed.parquet  items.json  sitemap.xml
v0.5.7/CONTRIBUTING/: index.html
v0.5.7/api/: index.html
v0.5.7/search/: search_index.json
v0.5.8/: 404.html  index.html  sitemap.xml
v0.5.8-rc.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.8-rc.0/CONTRIBUTING/: index.html
v0.5.8-rc.0/api/: index.html
v0.5.8/CONTRIBUTING/: index.html
v0.5.8/api/: index.html
v0.5.8/search/: search_index.json
v0.5.9/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.9-beta.0/: 404.html  index.html  sitemap.xml
v0.5.9-beta.0/CONTRIBUTING/: index.html
v0.5.9-beta.0/api/: index.html
v0.5.9-beta.0/search/: search_index.json
v0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.6.0-beta.0/: 404.html  index.html  items.parquet  objects.inv  sitemap.xml
v0.6.0-rc.0/: 404.html  index.html  sitemap.xml
v0.7.0/: 404.html  index.html  sitemap.xml
v0.7.0-beta.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.0-beta.1/: 404.html  index.html  sitemap.xml
v0.7.0-beta.2/: 404.html  index.html  sitemap.xml
v0.7.0-beta.3/: 404.html  index.html  sitemap.xml
v0.7.0-beta.4/: 404.html  index.html  sitemap.xml
v0.7.0-beta.5/: 404.html  index.html  sitemap.xml
v0.7.0-beta.6/: 404.html  index.html  sitemap.xml
v0.7.1/: 404.html  index.html  sitemap.xml
v0.7.2/: 404.html  index.html  sitemap.xml
v0.8.0/: 404.html  index.html  sitemap.xml
v0.8.1/: 404.html  index.html  sitemap.xml
v0.8.2/: 404.html  index.html  sitemap.xml
v0.8.3/: 404.html  index.html  sitemap.xml
v0.8.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.10/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.11/: 404.html  index.html  sitemap.xml
v0.9.12/: 404.html  index.html  sitemap.xml
v0.9.13/: 404.html  index.html  sitemap.xml
v0.9.14/: 404.html  index.html  sitemap.xml
v0.9.15/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.4/: 404.html  index.html  sitemap.xml
v0.9.5/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.6/: 404.html  index.html  sitemap.xml
v0.9.7/: 404.html  index.html  sitemap.xml
v0.9.8/: 404.html  index.html  sitemap.xml
v0.9.9/: 404.html  index.html  sitemap.xml
(+857 files in other folders)
