[package]
name = "rustac-py"
version = "0.9.2"
edition = "2024"
publish = false

[lib]
name = "rustac"
crate-type = ["cdylib"]

[features]
duckdb-bundled = ["stac-duckdb/bundled"]
openssl-vendored = ["dep:openssl"]

[dependencies]
clap = "4.5.31"
duckdb = { version = "1.4.3", features = ["serde_json"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
geoarrow-schema = "0.6.2"
geojson = "0.24.1"
object_store = { version = "0.12.4", features = ["gcp", "aws", "azure", "http"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
parquet = "57.1.0"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
pyo3-arrow = "0.14.0"
pyo3-async-runtimes = { version = "0.26.0", features = [
    "tokio",
    "tokio-runtime",
] }
pyo3-log = "0.13.0"
pyo3-object_store = "0.6.0"
pythonize = "0.26.0"
rustac = { version = "0.1.1", features = ["pgstac"] }
serde = "1.0.217"
serde_json = { version = "1.0.146", features = ["preserve_order"] }
stac = { version = "0.14.0", features = ["geoarrow", "geoparquet"] }
stac-duckdb = "0.2.1"
stac-io = { version = "0.1.1", features = ["store-all", "geoparquet"] }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"

[build-dependencies]
cargo-lock = "11"
