[package]
name = "rustac-py"
version = "0.9.8"
edition = "2024"
publish = false

[lib]
name = "rustac"
crate-type = ["cdylib"]

[features]
duckdb-bundled = ["stac-duckdb/bundled"]
openssl-vendored = ["dep:openssl"]

[dependencies]
async-stream = "0.3.6"
clap = "4.6.0"
duckdb = "1.10501.0"
futures-core = "0.3.32"
futures-util = "0.3.32"
geoarrow-schema = "0.7.0"
geojson = "1.0.0"
object_store = { version = "0.13.2", features = ["gcp", "aws", "azure", "http"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
parquet = "58.1.0"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
pyo3-arrow = "0.17.0"
pyo3-async-runtimes = { version = "0.28.0", features = [
    "tokio",
    "tokio-runtime",
] }
pyo3-log = "0.13.0"
pyo3-object_store = { git = "https://github.com/developmentseed/obstore", rev = "9a7017a335ba59b062626b478c001c410093a5c7" }
pythonize = "0.28.0"
rustac = { git = "https://github.com/stac-utils/rustac", features = ["pgstac"] }
serde = "1.0.217"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
stac = { git = "https://github.com/stac-utils/rustac", features = ["geoarrow", "geoparquet"] }
stac-duckdb = { git = "https://github.com/stac-utils/rustac" }
stac-io = { git = "https://github.com/stac-utils/rustac", features = ["store-all", "geoparquet"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"

[build-dependencies]
cargo-lock = "11"

[patch.crates-io]
geoarrow-array = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "234c7bd287b3e3caaa9ece9e67e81259347121f8" }
geoarrow-schema = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "234c7bd287b3e3caaa9ece9e67e81259347121f8" }
geoparquet = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "234c7bd287b3e3caaa9ece9e67e81259347121f8" }
