[package]
name = "rustac-py"
version = "0.9.11"
edition = "2024"
description = "pyo3 bindings for the rustac family of crates"
license = "MIT OR Apache-2.0"
categories = ["science", "data-structures"]
homepage = "https://stac-utils.github.io/rustac-py"
repository = "https://github.com/stac-utils/rustac-py"

[lib]
name = "rustac_python"
crate-type = ["rlib", "cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
duckdb-bundled = ["stac-duckdb/bundled"]
openssl-vendored = ["dep:openssl"]

[dependencies]
async-stream = "0.3.6"
clap = "4.6.0"
duckdb = "1.10501.0"
futures-core = "0.3.32"
futures-util = "0.3.32"
geoarrow-schema = "0.8.0"
geojson = "1.0.0"
object_store = { version = "0.13.2", features = ["gcp", "aws", "azure", "http"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
parquet = "59.0.0"
pyo3 = "0.28.3"
pyo3-arrow = "0.18.0"
pyo3-async-runtimes = { version = "0.28.0", features = [
    "tokio",
    "tokio-runtime",
] }
pyo3-log = "0.13.0"
pyo3-object_store = "0.9.0"
pythonize = "0.28.0"
rustac = { version = "0.2.9", features = ["pgstac"] }
serde = "1.0.217"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
stac = { version = "0.17.1", features = ["geoarrow", "geoparquet"] }
stac-duckdb = "0.3.7"
stac-io = { version = "0.2.8", features = ["store-all", "geoparquet"] }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["rt-multi-thread"] }
tracing = "0.1.44"

[build-dependencies]
cargo-lock = "11"
