[project]
name = "stacrs"
description = "A no-dependency Python package for STAC, using Rust under the hood."
readme = "README.md"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
keywords = ["stac", "geospatial"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/gadomski/stacrs"
Documentation = "https://gadom.ski/stacrs"
Issues = "https://github.com/gadomski/stacrs/issues"

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "maturin>=1.7.4",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "stac-geoparquet>=0.6.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
