[project]
name = "stacrs"
description = "A small, no-dependency Python package for STAC, using Rust under the hood."
readme = "README.md"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
keywords = ["stac", "geospatial"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/gadomski/stacrs"
Documentation = "https://gadom.ski/stacrs"
Issues = "https://github.com/gadomski/stacrs/issues"

[tool.mypy]
files = "**/*.py"

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
dev-dependencies = [
    "maturin>=1.7.4",
    "mike>=2.1.3",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material[imaging]>=9.5.45",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.11.2",
    "pyarrow>=18.0.0",
    "pystac[validation]>=1.11.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.25.1",
    "ruff>=0.6.9",
    "stac-geoparquet>=0.6.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
