[project]
name = "rustac-duckdb-extensions"
version = "1.4.4-0"
description = "Pre-built DuckDB extensions for rustac"
readme = "README.md"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
keywords = ["stac", "geospatial", "duckdb"]
dependencies = []

[project.urls]
Repository = "https://github.com/stac-utils/rustac-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
